added addItemsToCart functionality and cart count functionality

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -22,6 +22,10 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   button {
